# sio-rs

./: Cargo.toml  MANUAL.md  README.md
src/: channel.rs  gfx.rs  instruction.rs  main.rs  main_dbg.rs  node.rs  parser.rs  pins.rs  register.rs  value.rs
src/debugger/: commands.rs  mod.rs  state.rs  tui.rs
tests/: programs.rs
tests/resources/: aoc1.sio  args.sio  beep.sio  fio_roundtrip.sio  fio_text_roundtrip.sio  lorem-ipsum.txt  minimal.sio  morse.sio  stacked-tests.sio
